--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animejs": "^3.2.1",
     "bootstrap": "^5.2.3",
+    "npm": "^9.6.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
     "react-dom": "^18.2.0",
