--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -12,7 +12,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "three": "^0.174.0",
+    "three-mesh-bvh": "^0.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
